--- a/cs03.Rmd
+++ b/cs03.Rmd
@@ -26,8 +26,8 @@ Based on data from the North Carolina Center for Health Statistics (NCHS), obtai
 # Reports
 
 - Interim report 1: create an engaging visualization of observed infant mortality rates by year, county and race
-- Interim report 2: using a hierarchical model, obtain estimates of infant mortality rates in 2015 by county and race. Compare to the published estimates from the SCHS and discuss any discrepancies in detail. Your report should include a visualization for 2015, a one page (maximum) description of the model used, 1-2 pages (maximum) describing your findings, and a one page report targeted at SCHS explaining how use of your model to obtain estimated rates compares to the methods you have seen them use so far, which are pooling years (as in the 2010-2014 graphic) or reporting rates based on small cell counts (as in 2015). In your report targeted to SCHS, if you feel they should use different methodology (e.g., your model) for estimating infant mortality rates, be sure to make a clear argument for doing so.
-- Final report: prepare a report, not to exceed 5 pages and accompanied by useful visualizations, describing infant mortality in NC by county and race, along with any trends over time overall or in subgroups
+- Interim report 2: using a hierarchical model, obtain estimates of infant mortality rates in 2015 by county and race/ethnicity and create your own version of the 2015 table published by SCHS. Compare your estimates to the published estimates from the SCHS and discuss any discrepancies in detail. Your report should include your table and visualization of estimates (and observed values) for 2015, a one page (maximum) description of the model used, 1-2 pages describing your findings, and a 1-2 page report targeted at SCHS explaining how use of your model to obtain estimated rates compares to the methods you have seen them use so far, which are pooling years (as in the 2010-2014 graphic) or reporting rates based on small cell counts (as in 2015). In your report targeted to SCHS, if you feel they should use different methodology (e.g., your model) for estimating infant mortality rates, be sure to make a clear argument for doing so. The maximum length of this report is 7 pages. All results should be fully reproducible. 
+- Final report: prepare a report, not to exceed 10 pages and accompanied by useful visualizations, describing infant mortality in NC by county and race/ethnicity, along with any trends over time overall or in subgroups.  All results should be fully reproducible. 
 
 
 # Resources
