--- a/decks/cs03_3_deck.Rmd
+++ b/decks/cs03_3_deck.Rmd
@@ -89,9 +89,11 @@ Radon, a naturally-occurring radioactive gas, is a carcinogen known to cause lun
 
 Radon levels in US homes varies greatly, and some homes have dangerously high radon levels.  In order to identify areas of the US with high radon exposures, the US EPA conducted a study of radon levels in a random sample of more than 80,000 homes.
 
+[Click here](http://www.ncradon.org/ncradon/) to check highest recorded radon levels in your area. Note that these levels may come from short-term home test kits, which vary widely in accuracy.
+
 ## Radon study
 
-We wish to estimate the distribution of radon levels in houses $i$ within 85 counties $j$ in Minnesota.  
+We wish to estimate the distribution of radon levels in houses $i$ within 85 counties $j$ in Minnesota. The outcome $y_i$ is the natural log of measured radon levels. 
 
 - One estimate would be the average of all radon levels in Minnesota (same estimate for all counties), $\overline{y}_{\cdot \cdot}$, but this ignores variation across counties, and some counties may have higher radon levels naturally than others (radon is more commonly found in soils with granite rock, as opposed to some other soil types).
 
@@ -136,7 +138,7 @@ The weighted average reflects the relative amount of information available on ea
 
 In practice, we carry out all estimation together (estimate variances along with the $\alpha$ parameters), but we won't worry about this yet.
 
-Code for the radon analysis [is available at this link](http://www.stat.columbia.edu/~gelman/arm/examples/radon/radon_chap12.R)  .
+Code for the radon analysis as presented in Gelman and Hill [is available at this link](http://www.stat.columbia.edu/~gelman/arm/examples/radon/radon_chap12.R)  .
 
 
 ## Location of measurement in radon study
